--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
     margin: auto;
 }
 
-#mapid { height: 600px; }
+#mapDiv { height: 600px; }
 
 #carouselExampleIndicators > div > div:nth-child(1) > div > h1 {
     color: black;
